--- a/requirements.txt
+++ b/requirements.txt
@@ -8,6 +8,7 @@ Flask-Moment==0.10.0
 Flask-Script==2.0.6
 Flask-SQLAlchemy==2.4.4
 future==0.18.2
+gunicorn==20.0.4
 itsdangerous==1.1.0
 Jinja2==2.11.2
 jose==1.0.0
